--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,7 +6,7 @@
     "impala": "./dist/cli.mjs"
   },
   "scripts": {
-    "build": "tsup src/core.ts src/cli.ts --format esm --dts --clean"
+    "build": "tsup src/core.ts src/cli.ts src/plugin.ts --format esm --dts --clean"
   },
   "module": "./dist/core.mjs",
   "types": "./dist/core.d.ts",
@@ -14,13 +14,21 @@
     ".": {
       "types": "./dist/core.d.ts",
       "import": "./dist/core.mjs"
+    },
+    "./plugin": {
+      "types": "./dist/plugin.d.ts",
+      "import": "./dist/plugin.mjs"
     }
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "tsup": "^6.7.0"
+    "tsup": "^6.7.0",
+    "vite": "^4.2.0"
+  },
+  "peerDependencies": {
+    "vite": ">=4"
   },
   "dependencies": {
     "path-to-regexp": "^6.2.1"
