--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@impalajs/core",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "",
   "bin": {
     "impala": "./dist/cli.mjs"
@@ -35,5 +35,8 @@
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
