--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -24,6 +24,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "tsup": "^6.7.0",
     "vite": "^4.2.0"
   },
@@ -31,7 +32,9 @@
     "vite": ">=4"
   },
   "dependencies": {
-    "path-to-regexp": "^6.2.1"
+    "express": "^4.18.2",
+    "path-to-regexp": "^6.2.1",
+    "radix3": "^1.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
