--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "",
   "scripts": {
-    "build": "tsup src/index.ts src/client.tsx --format cjs,esm --dts --clean"
+    "build": "tsup src/index.ts src/client.tsx src/head.tsx --format cjs,esm --dts --clean"
   },
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -18,13 +18,18 @@
       "types": "./dist/client.d.ts",
       "require": "./dist/client.js",
       "import": "./dist/client.mjs"
+    },
+    "./head": {
+      "types": "./dist/head.d.ts",
+      "require": "./dist/head.js",
+      "import": "./dist/head.mjs"
     }
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@impalajs/core": "workspace:^0.0.0"
+    "@impalajs/core": "workspace:*"
   },
   "devDependencies": {
     "react": "^18.2.0",
