feat: add preact support

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,14 +1,11 @@
 {
     "packages": {
-        "packages/core": {
-            "release-as": "0.0.5"
+        "packages/core": {},
+        "packages/preact": {
+            "release-as": "0.0.6"
         },
-        "packages/react": {
-            "release-as": "0.0.5"
-        },
-        "packages/create-impala": {
-            "release-as": "0.0.5"
-        }
+        "packages/react": {},
+        "packages/create-impala": {}
     },
     "plugins": [
         "node-workspace"
