--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -22,6 +22,9 @@ jobs:
           token: ${{ steps.get-token.outputs.token }}
       - uses: actions/checkout@v3
         if: ${{ steps.release.outputs.releases_created }}
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 7
       - uses: actions/setup-node@v3
         with:
           cache: "pnpm"
@@ -29,12 +32,12 @@ jobs:
           registry-url: "https://registry.npmjs.org"
         if: ${{ steps.release.outputs.releases_created }}
       - name: Install dependencies
-        run: yarn
+        run: pnpm install
         if: ${{ steps.release.outputs.releases_created }}
-      - run: yarn build:packages
+      - run: pnpm -r build
         if: ${{ steps.release.outputs.releases_created }}
-      - name: Authenticate Yarn
-        run: yarn config set npmAuthToken $NPM_AUTH_TOKEN
+      - name: Authenticate pnpm
+        run: pnpm config set '//registry.npmjs.org/:_authToken' "${NPM_AUTH_TOKEN}"
         if: ${{ steps.release.outputs.releases_created }}
         env:
           NPM_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
