chore: fix deps

--- a/scripts/package.json
+++ b/scripts/package.json
@@ -13,6 +13,8 @@
   "devDependencies": {
     "@types/prettier": "^2.7.2",
     "fast-glob": "^3.2.12",
-    "prettier": "^2.8.7"
+    "prettier": "^2.8.7",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3"
   }
 }
