--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -32,6 +32,9 @@
     "@impalajs/core": "workspace:*"
   },
   "devDependencies": {
+    "@types/node": "^18.15.7",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tsup": "^6.7.0"
