--- a/packages/react-rsc/package.json
+++ b/packages/react-rsc/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@impalajs/react-rsc",
-  "version": "0.0.6",
+  "version": "0.0.0",
   "description": "",
   "scripts": {
-    "build": "tsup src/index.ts src/client.tsx src/head.tsx --external virtual:client-bundle-map --external react --external react-server-dom-webpack --format cjs,esm --dts --clean"
+    "build": "tsup src/index.ts src/client.ts --external virtual:client-bundle-map --external virtual:server-bundle-map --external react --external react-server-dom-webpack --format cjs,esm --dts --clean"
   },
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -18,11 +18,6 @@
       "types": "./dist/client.d.ts",
       "require": "./dist/client.js",
       "import": "./dist/client.mjs"
-    },
-    "./head": {
-      "types": "./dist/head.d.ts",
-      "require": "./dist/head.js",
-      "import": "./dist/head.mjs"
     }
   },
   "keywords": [],
