--- a/templates/react-rsc-ts/package.json
+++ b/templates/react-rsc-ts/package.json
@@ -21,11 +21,11 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.2.0",
     "react": "0.0.0-experimental-8310854ce-20230331",
     "react-dom": "0.0.0-experimental-8310854ce-20230331",
-    "react-server-dom-webpack": "0.0.0-experimental-8310854ce-20230331"
+    "react-server-dom-webpack": "0.0.0-experimental-8310854ce-20230331",
+    "typescript": "^4.9.3",
+    "vite": "^4.2.0"
   },
   "peerDependencies": {
     "react": "experimental",
