--- a/templates/preact-js/package.json
+++ b/templates/preact-js/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "impala-app",
+  "name": "@demo/impala-preact-js",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -20,6 +20,6 @@
     "@babel/core": "^7.0.0-0",
     "@preact/preset-vite": "^2.5.0",
     "typescript": "^4.9.3",
-    "vite": "^4.2.0"
+    "vite": "^6.0.3"
   }
 }
