--- a/templates/react-js/package.json
+++ b/templates/react-js/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "impala-app",
+  "name": "@demo/impala-react-js",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -20,6 +20,6 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
-    "vite": "^4.2.0"
+    "vite": "^6.0.3"
   }
 }
