--- a/templates/react-ts/package.json
+++ b/templates/react-ts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "impala-app",
+  "name": "@demo/impala-react-ts",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -23,6 +23,6 @@
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
-    "vite": "^4.2.0"
+    "vite": "^6.0.3"
   }
 }
